[tool.poetry]
name = "plkit"
version = "0.0.3"
description = "A wrapper based on pytorch-lightning"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.5"
pytorch-lightning = "^0.8"
sklearn = "*"
scipy = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
