[tool.poetry]
name = "plkit"
version = "0.0.3"
description = "Deep learning boilerplates on pytorch-lightning"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/plkit"
repository  = "https://github.com/pwwang/plkit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.5"
pytorch-lightning = "^0.8"
sklearn = "*"
scipy = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
