[tool.poetry]
name = "plkit"
version = "0.0.7"
description = "A wrapper for pytorch-lightning to make you write even less code"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
homepage = "https://github.com/pwwang/plkit"
repository  = "https://github.com/pwwang/plkit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
torch = "1.*"
pytorch-lightning = "*"
diot = "*"
rich = "8.*"
cmdy = "*"
optuna = "2.*"
tqdm = "4.48.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
torchvision = "*"
numpy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
